fixing layout issues

--- a/src/components/TextEditor/TextEditor.module.scss
+++ b/src/components/TextEditor/TextEditor.module.scss
@@ -8,7 +8,7 @@
 
     .textArea {
         width: 100%;
-        height: 80vh;
+
         resize: none;
         border: none;
         background-color: $gray-2;
